# Multi-agent-Double-Deep-Q-Networks

./: README.md
Forager/src/: log4j2.xml
Forager/src/agents/: AgentThread.java  RandomAgent.java  SmartLinearWeightedAgent.java  WeightedAgent.java
Forager/src/berryTypes/: BerryType.java  LeftRightBerries.java  RandomBerries.java
Forager/src/charts/: ChartFrame.java  LineChart.java
Forager/src/foraging/: ForagerScenario.java  Manager.java  Map.java  ServerAcceptThread.java  ServerThread.java
Forager/src/mapTypes/: HType.java  MapType.java  TunnelType.java  WallType.java
Forager/src/utils/: GifSequenceWriter.java  MakeGif.java  Statistics.java
MaDDQN/src/: config.py  gen_tests.py  main.py
MaDDQN/src/dqn/: agent.py  base.py  environment.py  history.py  ops.py  replay_memory.py  utils.py
MaDDQN/src/ff/: ffAgent.py  ffEnvironment.py
MaDDQN/src/prst/: prstAgent.py  prstEnvironment.py
MaDDQN/src/q/: q_learning.py
Pursuit/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.status  configure.ac  configure.orig  glibtest  replay.sh  start.sh  start10.sh  start3.sh  start4.sh  start5.sh  start6.sh  start7.sh  start8.sh  start9.sh  test.c
Pursuit/logplayer/: Makefile  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.orig  libtool  testgtk.c  tg
Pursuit/logplayer/src/: Controller.C  Controller.h  LogPlayer.C  LogPlayer.h  LogWorld.C  LogWorld.h  Makefile  Makefile.am  Makefile.in  go.xpm  main.C  minus.xpm  play.xpm  plus.xpm  pursuit_logplayer  rev.xpm  stop.xpm  types.h
Pursuit/logplayer/src/.deps/: Controller.Po  LogPlayer.Po  LogWorld.Po  main.Po
Pursuit/monitor/: Makefile  README  config.h  config.h.in  config.status  configure  configure.ac  libtool
Pursuit/monitor/doc/: doxygen.cfg
Pursuit/monitor/src/: Makefile  Makefile.am  Makefile.in  Monitor.C  Monitor.h  MonitorParameters.C  MonitorParameters.h  RGBcolor.C  RGBcolor.h  monitor.conf  pursuit_monitor
Pursuit/monitor/src/.deps/: Monitor.Po  MonitorParameters.Po  RGBcolor.Po
Pursuit/pursuit/: Makefile  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
Pursuit/pursuit/src/: Agent.C  Agent.h  Makefile  Makefile.am  Makefile.in  Parameters.C  Parameters.h  World.C  World.C.orig  World.h  cycles.txt  main.C  pursuit  pursuit.conf  types.C  types.h
Pursuit/pursuit/src/.deps/: Agent.Po  Parameters.Po  World.Po  main.Po  types.Po
Pursuit/pursuitbase/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
Pursuit/pursuitbase/doc/: doxygen.cfg
Pursuit/pursuitbase/pursuitbase/: Connection.C  Connection.h  Connection.lo  GenericValues.C  GenericValues.h  GenericValues.lo  Makefile  Makefile.am  Makefile.in  libConnection.la  libGenericValues.la
Pursuit/pursuitbase/pursuitbase/.deps/: Connection.Plo  GenericValues.Plo
Pursuit/pursuitbase/pursuitbase/.libs/: libConnection.la  libGenericValues.la
Pursuit/skeletons/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac
Pursuit/skeletons/java_predator/: Agent.java  Makefile  Predator.java  StringDatagramSocket.java
Pursuit/skeletons/predator/: ChangeLog  Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool
Pursuit/skeletons/predator/src/: Makefile  Makefile.am  Makefile.in  Predator.C  Predator.h  predator
Pursuit/skeletons/predator/src/.deps/: Predator.Po
Pursuit/skeletons/prey/: Makefile  Makefile.in  README  config.h  config.status  configure  configure.ac  libtool
Pursuit/skeletons/prey/src/: Makefile  Makefile.am  Makefile.in  Prey.C  Prey.h  prey
Pursuit/skeletons/prey/src/.deps/: Prey.Po
Pursuit/skeletons/python_predator/: predator.py
