dnl Process this file with autoconf to produce a configure script.
AC_INIT(skeletons, 0.8.0, jellekok@science.uva.nl)
AM_INIT_AUTOMAKE(skeletons, 0.8)

dnl process all subdirs, pursuitbase first because it is used by the others
AC_CONFIG_SUBDIRS([prey predator])
AC_PROG_MAKE_SET

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
