## Sources for connection lib
h_sources = Connection.h 
cc_sources = Connection.C

## Sources for genericvalues lib
h_sources_gv = GenericValues.h
cc_sources_gv = GenericValues.C

## create two libtool libraries that are not installed (noinst)
noinst_LTLIBRARIES= libConnection.la libGenericValues.la

## specify the sources of the two libraries.
libConnection_la_SOURCES= $(h_sources) $(cc_sources)
libGenericValues_la_SOURCES= $(h_sources_gv) $(cc_sources_gv)





